--- a/pom.xml
+++ b/pom.xml
@@ -9,9 +9,11 @@
 	<packaging>pom</packaging>
 
 	<modules>
-		<module>student</module>
-		<module>rating</module>
+		<module>eureka-service</module>
 		<module>zipkin-server</module>
+		<module>config-service</module>
+		<module>student-service</module>
+		<module>rating-service</module>
 	</modules>
 
 </project>
