--- a/pom.xml
+++ b/pom.xml
@@ -5,7 +5,7 @@
 
     <groupId>example</groupId>
     <artifactId>spring-cloud-bootstrap</artifactId>
-	<version>1.0.0-SNAPSHOT</version>
+	<version>1.0.0</version>
 	<packaging>pom</packaging>
 
 	<modules>
@@ -14,6 +14,7 @@
 		<module>config-service</module>
 		<module>student-service</module>
 		<module>rating-service</module>
+		<module>gateway-service</module>
 	</modules>
 
 </project>
