--- a/config-service/src/main/resources/shared/gateway-service-docker.yml
+++ b/config-service/src/main/resources/shared/gateway-service-docker.yml
@@ -1,13 +1,26 @@
-spring:
-  application:
-    name: gateway-service
-
-server:
-  port: 8765
-
 eureka:
   client:
     registerWithEureka: true
     fetchRegistry: true
     serviceUrl:
       defaultZone: http://eureka-service:8761/eureka
+
+zuul:
+  sensitive-headers: Authorization
+  ignoredServices: '*'
+  host:
+    connect-timeout-millis: 20000
+    socket-timeout-millis: 20000
+
+  routes:
+    student-service:
+      path: /student-service/**
+      url: http://student-service:7000
+      stripPrefix: True
+      sensitiveHeaders:
+
+    rating-service:
+      path: /rating-service/**
+      url: http://rating-service:5000
+      stripPrefix: True
+      sensitiveHeaders:
