--- a/config-service/src/main/resources/shared/gateway-service.yml
+++ b/config-service/src/main/resources/shared/gateway-service.yml
@@ -1,19 +1,11 @@
-spring:
-  application:
-    name: gateway-service
-
 server:
   port: 8765
 
 eureka:
   client:
-    service-url:
+    serviceUrl:
       defaultZone: http://localhost:8761/eureka
 
-zuul:
-  routes:
-    student:
-      url: http://localhost:8090
 ribbon:
   eureka:
     enabled: false
