--- a/config-service/src/main/resources/bootstrap.yml
+++ b/config-service/src/main/resources/bootstrap.yml
@@ -25,9 +25,9 @@ spring:
         # Using config in local
         native:
           search-locations: classpath:/shared
-        # git:
-        #   uri: https://github.com/nhatthai/config-repo
-        #   basedir: target/config
+        git:
+          uri: https://github.com/nhatthai/config-repo
+          basedir: target/config
 
 server:
   port: 8888
