--- a/config-service/src/main/resources/shared/application.yml
+++ b/config-service/src/main/resources/shared/application.yml
@@ -8,7 +8,22 @@ eureka:
 logging:
   pattern:
     console: '%d{yyyy-MM-dd HH:mm:ss.SSS} [trace=%X{X-Trace-Id:-},span=%X{X-Span-Id:-}] [%15.15t] %-40.40logger{39}: %m%n'
+    file: '%d{dd-MM-yyyy HH:mm:ss.SSS} [%thread] %-5level %logger{36}.%M - %msg%n'
+  level:
+    root: INFO
+    example: debug
+    org.springframework: INFO
+  path: logs
+  file: ${logging.path}/log.log
 
 spring:
   zipkin:
     baseUrl: http://zipkin-server:9411
+
+  sleuth:
+    sampler:
+      percentage: 1.0
+
+  rabbitmq:
+    host: rabbitmq
+    port: 5672
